--- a/_config.yml
+++ b/_config.yml
@@ -1,68 +1,68 @@
 inc:
   # Blog Information
-  title:        "Jekyll Incorporated"
+  title:        "TralahTek Incorporated"
   subtitle:     "Modern Jekyll based blog for companies"
   cover_image:  blog-cover.jpg
   logo:         logo.png
-  
+
   # Company information
-  company:      Incorporated
-  url:          http://sendtoinc.com/
-  facebook:     sendtoinc
-  twitter:      sendtoinc
+  company:      TralahTek
+  url:          https://tralahtek.com/
+  facebook:     ""
+  twitter:      tralahtek
   gplus:        '101183822199340201470'
-  about_link:   https://sendtoinc.com/about/
-  
+  about_link:   https://tralahtek.com/about/
+
   # Product Information
-  product_link: http://incorporated.sendtoinc.com/
+  product_link: http://tralahtek.com/
   tagline:      "Get a modern blog for your company"
-  
+
   # Comments
   disqus:
     # Eg. "exampleblog" Set to false to disable comments
     shortname:  false
-  
+
   # Sharing settings
   sharing:
-    twitter:    false
-    facebook:   false
+    twitter:    true
+    facebook:   true
     gplus:      false
     hn:         false
-    
-  
- # Analytics     
+
+
+ # Analytics
   analytics:
     google: false # Add tracking code in _includes/_google-analytics.html
-      
-      
+
+
   # Google Fonts
   # eg. 'Droid+Sans:400,700|Droid+Serif:400,700'
   google_font: 'Droid+Sans:400,700'
-  
+
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://incorporated.sendtoinc.com
-source:      .
-destination: ./_site
-plugins:     ./_plugins
-layouts:     ./_layouts
-include:     ['.htaccess']
-exclude:     []
-timezone:    nil
+plugins:
+    - jekyll-assets
+    - jekyll-paginate
+include:
+    - .htaccess
+    - assets/*
+exclude:
+    - README*
+timezone:    Africa/Nairobi
 
 # Show future posts
 future:      false
-show_drafts: nil
+show_drafts: false
 limit_posts: 0
-pygments:    true
+# highlighter:    pygments
 
-relative_permalinks: true
 
-permalink:     pretty
+permalink:     /:categories/:year/:month/:day/:title/
 paginate_path: 'page:num'
 paginate: 10
 
-markdown:      maruku
+markdown:      kramdown
 markdown_ext:  markdown,mkd,mkdn,md
 textile_ext:   textile
 
@@ -71,7 +71,7 @@ excerpt_separator: "<!-- more -->"
 safe:        false
 host:        0.0.0.0
 port:        4000
-baseurl:     /
+baseurl:     ''
 lsi:         false
 
 maruku:
@@ -93,15 +93,7 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
-  use_coderay: false
-
-  coderay:
-    coderay_wrap: div
-    coderay_line_numbers: inline
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: style
+  enable_coderay: false
 
 redcloth:
   hard_breaks: true
@@ -110,9 +102,8 @@ redcloth:
 # jekyll-assets: see more at https://github.com/ixti/jekyll-assets
 #
 assets:
-
+  basename: /assets/
   dirname: assets
-  baseurl: /assets/
   sources:
     - _assets/javascripts
     - _assets/stylesheets
