--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ inc:
   about_link:   https://tralahtek.com/about/
 
   # Product Information
-  product_link: http://tralahtek.com/
+  product_link: https://tralahtek.com/
   tagline:      "Get a modern blog for your company"
 
   # Comments
