modularizing code, fontawesome

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ inc:
   company:      TralahTek LLC
   url:          https://tralahtek.com/
   twitter:      TralahM
+  github:      TralahM
   about_link:   /about/
 
   # Product Information
